# desafio-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/core/: database.py
app/models/: models.py
app/routers/: atleta.py  categoria.py  centro_treinamento.py
app/schemas/: schemas.py
